acuator checking health,info and other features of app

--- a/01-spring-boot-overview/01-spring-boot-demo/src/main/resources/application.properties
+++ b/01-spring-boot-overview/01-spring-boot-demo/src/main/resources/application.properties
@@ -4,8 +4,15 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
 spring.security.user.name=root
 spring.security.user.password=root
-info.app.name=Spring project make cool web app
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=health,info
+management.info.env.enabled=true
+info.app.name=Spring app
+info.app.description=Spring project make cool web app
 info.app.version=1.0.0
 
