--- a/04-spring-boot-rest-crud/02-spring-boot-rest-crud-employee/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/02-spring-boot-rest-crud-employee/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=cruddemo
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
