thymeleaf demo with different thymeleaf component

--- a/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/application.properties
+++ b/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=thymeleafdemo
 countries=Sweden,Germany,UK,Norway,Uyghuristan,France
+languages=Java,Go,Python,C
+systems=Linux,macOS,Microsoft Windows
